<resources>
    <string name="app_name">GitHubPractice</string>
    <string name="write_your_name_here">Write your name here...</string>
    <string name="writer">Writer</string>
    <string name="hacker">Hacker</string>
    <string name="joseph_alivio">Joseph Alivio</string>
    <string name="project_manager_name">Project Manager Name :</string>
    <string name="christian_igoy">Christian Igoy</string>
    <string name="ako_ra_ni">Ako ra ni</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>